[package]
name = "caramelocoin_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
serde = "1.0.130"
serde_json = "1.0.70"
serde_derive = "1.0"
byteorder = "1"
num-bigint = "0.4.3"
num = "0.1.42"
rs-leveldb = "0.1.5"
tempdir = "0.3.7"
ring = "0.16.20"
ripemd160 = "0.9.1"
